--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,47 +1,148 @@
 body {
-	min-height: 1080px;
+	overflow: scroll;
+	font-family: 'Inter', sans-serif;
+	font-size: 18px;
+	background-color: #00a985;
+}
+
+h1 {
+	font-size: 2.4em;
+	font-weight: 800;
+}
+
+h2 {
+	font-size: 0.8em;
+	color: lightgray; 
+	display: inline-block; 
+	overflow-wrap: nowrap;
+	margin-left: 20px; 
+	margin-right: 20px; 
+	font-style: italic;
+} 
+
+p {
+	color: #4e5153;
 }
 
 #mainContent {
-	max-height: 1080px;
-	min-height:  max-content; 
-	background-color: lightgray;
 	display: flex;
 	flex-wrap: wrap;
+	margin: 20px auto;
+	max-height: 1080px;
+	min-height:  max-content;
+	max-width: 1440px;
+	background-color: #08342b;
+	border-radius: 12px;
 }
 
 #intro {
 	display: inherit;
-	max-width: 600px;
-	max-height: 600px;
-	min-width: 33%;
-	margin-top: 30px; 
-	margin-left: 10%;
+	max-width: 650px;
+	max-height: 350px;
+	min-height: 250px;
+	padding: 50px;
+	min-width: fit-content;
+	margin: auto;
 	flex-direction: column;
-	background-color: aliceblue;
+	justify-content: center;
+	position: relative;
+	bottom: 50px;
+	background-color: #ebfdf8;
+	border-radius: 12px;
+	-webkit-box-shadow: 1px 05px 10px 0 rgba(25,25,25,025);
+	box-shadow: 1px 05px 10px 0 rgba(25,25,25,025);
+}
+
+#inputUsernameContainer {
+	display: flex; 
+	justify-content: flex-end;
 }
 
 #usernameDisplay {
 	font-family: monospace;
 	font-style: italic; 
 	color: gray; 
-	font-size: small;
+	font-size: 0.6em;
 }
 
 #chatStuff {
 	display: inherit;
 	flex-direction: column;
 	flex-basis:  100%;
+	margin-left:  auto;
+	margin-right:  auto;
+	height: 100%;
 	max-width: 600px;
-	max-height: 800px;
+	max-height: 720px;
 	min-width: 33%;
-	margin-left:  10%; 
-	background-color: palevioletred;
+	min-height: 500px;
+
 }
 
 #chat-messages {
-	min-height: 400px; 
-	max-height: 800px; 
-	margin-top: 30%; 
-	background-color: mediumvioletred;
+	display: flex;
+	flex-direction: column-reverse;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 45%;
+	min-height: 300px; 
+	max-height: 600px; 
+	margin:  10% auto 0 auto; 
+	padding: 16px;
+	background-color: #0D1C18;
+	border-radius: 6px;
+	-webkit-box-shadow:inset 1px 05px 10px 0 rgba(0,0,0,025);
+	box-shadow:inset 1px 05px 10px 0 rgba(0,0,0,025);
 }
+
+#chat-form {
+	margin: 10px 5px;
+	color: white;
+	min-height: 128px;
+}
+
+/*#chat-form > input {
+	width: 100%;
+	height: 50%;
+}
+*/
+
+#chat-form > textarea {
+	resize: none;
+	width: 98%;
+	height: 40%;
+	border-radius: 4px;
+	border-width: 0;
+}
+
+#chat-form > button {
+	display: block;
+	color: whitesmoke;
+	float: right;
+	padding: 5px;
+	background-color: inherit;
+	border-radius: 10px;
+	border-width: 1px;
+	border-color: whitesmoke;
+	margin: 2%;
+}
+
+.chatPost {
+	color: white;
+	margin: 12px auto;
+	padding: 12px 16px;
+	background-color: darkslategray;
+	border-radius: 35px 25px 35px 0;
+}
+.chatPost > p {
+	color: white;
+	font-size: 0.9em;
+}
+.chatPost > h3 {
+	margin-top: 12px;
+}
+
+.yourText {
+	border-radius: 25px 35px 0 35px;
+}
+
