--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,15 +6,17 @@
 	--white: #E0E4E7;
 	--black: #111;
 	background-color: var(--black);
-	color-scheme: light dark;
+	color-scheme: dark;
 }
 
 
 body {
 	/*overflow: scroll;*/
+	margin: 0;
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	height: 98vh;
+	background-image: linear-gradient(30deg,var(--black),var(--darkgray));
 }
 
 h1 {
@@ -50,16 +52,16 @@ p {
 	margin: auto;
 	display: flex;
 	max-width: 650px;
-	max-height: 350px;
+	height: 165px;
 	padding: 40px;
 	min-width: fit-content;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-end;
 	align-items: center;
 	background-color: var(--white);
 	border-radius: 12px;
-	/*-webkit-box-shadow: 1px 05px 10px 0 rgba(25,25,25,025);
-	box-shadow: 1px 05px 10px 0 rgba(25,25,25,025);*/
+	-webkit-box-shadow: 0 5px 12px -2px rgba(1,1,1,035);
+	box-shadow: 0 5px 12px -2px rgba(1,1,1,035);
 	transition: 0.5s;
 	opacity: 1;
 }
@@ -90,7 +92,8 @@ p {
 	background-color: var(--darkgray);
 	transition: 1s;
 	opacity: 0;
-
+	-webkit-box-shadow: 0px 2px 6px -2px rgba(1,1,1,0.35);
+	box-shadow: 0px 2px 6px -2px rgba(1,1,1,0.35);
 
 }
 
@@ -108,8 +111,8 @@ p {
 	max-width: 88%;
 	background-color: var(--darkgray);
 	border-radius: 6px;
-	-webkit-box-shadow:inset 1px 05px 10px 0 rgba(0,0,0,025);
-	box-shadow:inset 1px 05px 10px 0 rgba(0,0,0,025);
+	-webkit-box-shadow: inset -2px 2px 12px 0px rgba(2,2,2,0.70);
+	box-shadow: inset -2px 2px 12px 0px rgba(2,2,2,0.70);
 }
 
 #chat-form {
@@ -131,17 +134,20 @@ p {
 
 #user-selection {
 	display: block;
-	margin: 10px 0;
+	margin: 10px 10px 10px 0;
 }
 
 #chat-form > textarea {
 	margin: 0 5px;
-	padding: 6px;
+	padding: 10px;
 	resize: none;
 	width: 98%;
 	height: 40%;
-	border-radius: 6px;
-	border-width: 0;
+	font-family: inherit;
+	font-size: 14px;
+	background-color: #222;
+	border: 2px solid #1A1A1A;
+	border-radius: 8px;
 }
 
 #send-message-button-div {
@@ -152,12 +158,16 @@ p {
 }
 
 #send-button {
-	font-size: 14px;
+	margin: auto 0 auto 25px;
 	color: var(--white);
-	padding: 8px 16px;
+	padding: 20px;
 	background-color: inherit;
-	border-radius: 22px;
-	border-width: 1px;
+	background-image: url(angle-up.png);
+	background-size: 66%;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-radius: 30px;
+	border-width: 2px;
 	border-color: var(--white);
 	cursor: pointer;
 }
@@ -174,6 +184,8 @@ p {
 .chat-post > p {
 	color: var(--white);
 	font-size: 0.9em;
+	hyphens: auto;
+	word-wrap: break-word;
 }
 .chat-post > h3 {
 	margin-top: 12px;
@@ -186,9 +198,11 @@ p {
 	border-right: solid;
 }
 
-@/*media screen and (prefers-color-scheme: light) {
+/*
+@media screen and (prefers-color-scheme: light) {
   body {
     background-color: white;
     color: black;
   }
-}*/
+}
+*/
